# ridges-api

./: .env.example  .gitignore  Dockerfile  README.md  data.db  main.py  platform.db  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
copilot/: .workspace
copilot/api/: manifest.yml
copilot/environments/prod/: manifest.yml
src/: data.db  main.py  test.py
src/db/: database.py  models.py  operations.py  operations_new.py  postgres_schema.sql  schema.py
src/endpoints/: agents.py  dashboard.py  ingestion.py  miner.py  retrieval.py  upload.py  validator.py
src/models/: __init__.py  codegen_challenge_responses.py  codegen_challenges.py  codegen_response.py  miner_responses.py  pydantic_models.py
src/socket/: server.py  server_helpers.py
src/utils/: auth.py  cache.py  chutes.py  config.py  logging.py  models.py
src/utils/db/: challenge_types.py  operations.py  schema.py
