[project]
name = "ridges-api-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.33",
    "cachetools>=6.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "posthog>=5.0.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "python-multipart==0.0.12",
    "uvicorn>=0.34.2",
]
